--- a/app/src/main/res/layout/activity_3.xml
+++ b/app/src/main/res/layout/activity_3.xml
@@ -5,45 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".Activity3">
 
     <EditText
-        android:id="@+id/etName"
+        android:id="@+id/etSurname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:ems="10"
-        android:hint="@string/please_enter_your_name"
+        android:gravity="center_horizontal"
+        android:hint="@string/please_enter_your_surname"
         android:inputType="textPersonName"
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
         android:importantForAutofill="no" />
 
     <Button
-        android:id="@+id/btnAct2"
+        android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
-        android:text="@string/activity_2" />
-
-    <Button
-        android:id="@+id/btnAct3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:text="@string/activity_3" />
-
-    <TextView
-        android:id="@+id/tvResults"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:text="@string/activity_3_data" />
+        android:text="@string/submit"
+        android:textStyle="bold" />
 </LinearLayout>
